edit button size

--- a/css/style.css
+++ b/css/style.css
@@ -1,48 +1,49 @@
-input[id = "menuicon"] {
+input[id="menuicon"] {
     display: none;
 }
 
-input[id = "menuicon"] + label {
+input[id="menuicon"] + label {
     display: block;
     width: 60px;
     height: 40px;
     position: relative;
     cursor: pointer;
+    margin: 30px;
 }
 
-input[id = "menuicon"] + label span {
+input[id="menuicon"] + label span {
     display: block;
     position: absolute;
     width: 100%;
     height: 5px;
     border-radius: 30px;
-    background: #000;
+    background-color: snow;
     transition: all 0.35s;
 }
 
-input[id = "menuicon"] + label span:nth-child(1) {
+input[id="menuicon"] + label span:nth-child(1) {
     top: 0;
 }
 
-input[id = "menuicon"] + label span:nth-child(2) {
+input[id="menuicon"] + label span:nth-child(2) {
     top: 50%;
     transform: translateY(-50%);
 }
 
-input[id = "menuicon"] + label span:nth-child(3) {
+input[id="menuicon"] + label span:nth-child(3) {
     bottom: 0;
 }
 
-input[id = "menuicon"]:checked + label span:nth-child(1) {
+input[id="menuicon"]:checked + label span:nth-child(1) {
     top: 50%;
     transform: translateY(-50%) rotate(45deg);
 }
 
-input[id = "menuicon"]:checked + label span:nth-child(2) {
+input[id="menuicon"]:checked + label span:nth-child(2) {
     opacity: 0;
 }
 
-input[id = "menuicon"]:checked + label span:nth-child(3) {
+input[id="menuicon"]:checked + label span:nth-child(3) {
     bottom: 50%;
     transform: translateY(50%) rotate(-45deg);
 }
