--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,94 @@
+/* 배경 이미지 스타일 */
+body {
+    margin: 0;
+    padding: 0;
+    background-image: url('img/study00.gif');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+}
+
+/* 반투명한 배경 스타일 */
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1;
+    pointer-events: none;
+}
+
+/* 문구 스타일 */
+.text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: seashell;
+    font-size: 75px;
+    text-align: center;
+    z-index: 2;
+}
+
+/* 푸터 스타일 */
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    background-color: rgba(0.1, 0, 0, 0.3);
+    color: white;
+    font-size: 12px;
+    text-align: center;
+}
+
+@keyframes fadeInUp {
+    0% {
+        opacity: 0;
+        transform: translate3d(0%, 0%, 0%);
+    }
+    to {
+        opacity: 1;
+        transform: translateZ(1);
+    }
+}
+
+.text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: seashell;
+    font-size: 75px;
+    text-align: center;
+    z-index: 2;
+    opacity: 0;
+    animation-fill-mode: forwards;
+    animation: fadeInUp 2.5s;
+}
+
+.text#secondText {
+    animation-delay: 2.5s;
+}
+
+.text#thirdText {
+    animation-delay: 5s;
+}
+
+.text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: seashell;
+    font-size: 75px;
+    text-align: center;
+    z-index: 2;
+    animation: fadeInUp 2.5s;
+}
+
 input[id="menuicon"] {
     display: none;
     z-index: 2;
