--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,79 @@ body {
     text-align: center;
 }
 
+div[class = "sidebar"] {
+    width:250px;
+    height:100%;
+    background-color:black;
+    position:fixed;
+    top:0;
+    left:-400px;
+    z-index:1;
+    transition:all 1s;
+    padding: 5px 0px 5px 15px;
+}
+
+.sidebar li a::before {
+    margin-right: 40px; /* 아이콘과 메뉴 이름 사이의 우측 여백 조절 */
+}
+
+.sidebar li a {
+    display: flex; /* 아이콘과 텍스트를 가로로 나란히 정렬 */
+    align-items: center;
+}
+
+
+.sidebar ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+.sidebar a, .sidebar > label {
+    display: block;
+    height: 20px;
+    padding: 20px;
+    cursor: pointer;
+    color: white;
+    text-decoration: none;
+}
+
+.sidebar a:hover {
+    color: #000;
+}
+.sidebar ul li:hover, .sidebar > label:hover {
+    background-color: #fff;
+    color: #000;
+    border-radius: 10px;
+}
+
+.sidebar #expand-sidebar:not(:checked) ~ ul { /* 데스크탑 화면에서도 메뉴를 접었더 펼칠 수 있음 */
+    display: none;
+}
+
+.sidebar ::before{
+    font-family: 'Material Icons';
+    font-size: 2.0em;
+    float: left;
+    clear: left;
+}
+.sidebar label::before{ content: '\e5d2'; }
+.sidebar li:nth-child(1) a::before{ content: '\f02e'; }
+.sidebar li:nth-child(2) a::before{ content: '\eb7e'; }
+.sidebar li:nth-child(3) a::before{ content: '\eb93'; }
+.sidebar li:nth-child(4) a::before{ content: '\eb7c'; }
+.sidebar li:nth-child(5) a::before{ content: '\e54f'; }
+.sidebar li:nth-child(6) a::before{ content: '\e57b'; }
+.sidebar li:nth-child(7) a::before{ content: '\e9f4'; }
+.sidebar li:nth-child(8) a::before{ content: '\e0e5'; }
+.sidebar li:nth-child(9) a::before{ content: '\e1c5'; }
+
+
+
+ul {
+    /* 다른 스타일 속성들을 설정할 수 있음 */
+}
+
+
 @keyframes fadeInUp {
     0% {
         opacity: 0;
@@ -81,6 +154,10 @@ body {
 }
 
 
+
+li:first-child {
+    margin-top: 150px; /* 각 메뉴 항목 위쪽에 100px 여백 추가 */
+}
 
 
 
@@ -136,16 +213,7 @@ input[id="menuicon"]:checked + label span:nth-child(3) {
     transform: translateY(50%) rotate(-45deg);
 }
 
-div[class = "sidebar"] {
-    width:400px;
-    height:100%;
-    background-color:white;
-    position:fixed;
-    top:0;
-    left:-400px;
-    z-index:1;
-    transition:all .35s;
-}
+
 
 input[id="menuicon"]:checked + label + div {
     left:0
